<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="arcade">Arcade</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="confirm_play_game">Play %s?</string>
    <string name="connect">Connect</string>
    <string name="copied_qr_data_to_clipboard">"Copied QR data to clipboard"</string>
    <string name="copy_qr_data">Copy QR data</string>
    <string name="credits">Credits</string>
    <string name="developer">Developer</string>
    <string name="enter_developer">Enter developer</string>
    <string name="enter_genre">Enter genre</string>
    <string name="enter_mister_ip_address">Enter MiSTer IP address</string>
    <string name="enter_publisher">Enter publisher</string>
    <string name="enter_region">Enter region</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_year">Enter year</string>
    <string name="error">Error</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="failed_to_connect_message">Ensure that both devices are on the same network and that the IP address of the MiSTer has been set correctly.</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="gallery_view">Gallery view</string>
    <string name="games">Games</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="import_metadata">Import metadata</string>
    <string name="list_view">List View</string>
    <string name="no">No</string>
    <string name="no_camera_permission">Camera permission is required to use this feature.</string>
    <string name="no_games_found">No games found</string>
    <string name="no_metadata_found">No metadata found</string>
    <string name="not_now">Not now</string>
    <string name="ok">OK</string>
    <string name="platforms">Platforms</string>
    <string name="play">Play</string>
    <string name="preferences">Preferences</string>
    <string name="random">Random</string>
    <string name="region">Region</string>
    <string name="remote">Remote</string>
    <string name="rimokon">Rimokon</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="search">Search</string>
    <string name="set_ip_address">Set IP address</string>
    <string name="sync">Sync</string>
    <string name="sync_full_library">Sync full library</string>
    <string name="system">System</string>
    <string name="title">Title</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="warning">Warning</string>
    <string name="would_you_like_to_play">Would you like to play %s?</string>
    <string name="would_you_like_to_sync_your_library">Would you like to sync your %s library?</string>
    <string name="would_you_like_to_use_zaparoo">Would you like to use Zaparoo?</string>
    <string name="year">Year</string>
    <string name="yes">Yes</string>
</resources>
